objects/Correction_Code__c.object
<CustomObject>
    <fields>
        <fullName>Code_Description_DE__c</fullName>
        <label>Code Description DE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Code_Description_EN__c</fullName>
        <label>Code Description EN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Correction_Type__c</fullName>
        <label>Correction Type</label>
        <type>TextArea</type>
    </fields>
    <label>PT - Correction Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Correction Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Correction Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>